# CMakeInitializerExampleProjects

./: README.md
c-example/: CMakeLists.txt  cmake-pm
c-example/app/: CMakeLists.txt  app.c
c-example/docs/: mainpage.md
c-example/src/example_lib/: CMakeLists.txt
c-example/test/: CMakeLists.txt  exampletest.cpp
cpp-example/: CMakeLists.txt  cmake-pm
cpp-example/app/: CMakeLists.txt  app.cpp
cpp-example/docs/: CMakeLists.txt  mainpage.md
cpp-example/src/example_lib/: CMakeLists.txt  example_lib.cpp
