add_executable(c-example app.c)
set(GENERAL_COMPILE_FLAGS "-Wall;-Wextra")
set(DEBUG_COMPILE_FLAGS "${GENERAL_COMPILE_FLAGS};-g;-O0")
set(RELEASE_COMPILE_FLAGS "${GENERAL_COMPILE_FLAGS};-O3")
target_compile_options(c-example PRIVATE "$<$<CONFIG:DEBUG>:${DEBUG_COMPILE_FLAGS}>")
target_compile_options(c-example PRIVATE "$<$<CONFIG:RELEASE>:${RELEASE_COMPILE_FLAGS}>")
target_link_libraries(c-example PRIVATE example_lib)
